support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_class.i
%module xxx

int class(int x);





